getting .travis.yml correct has seemed to be a historically moving target. Removing an unrecognized key to squelch a warning. Also, I hopefully got jfrog bintray configured correctly to accept these build uploads. Will it blend?

--- a/.travis.yml
+++ b/.travis.yml
@@ -284,8 +284,4 @@ branches:
     - master
 
 notifications:
-  recipients:
-    - petroff.ryan@gmail.com
-  email:
-    on_success: change
-    on_failure: change
+  email: false
